# webCadTool

./: .gitignore  README.md
.github/: copilot-instructions.md
web_cad_core/: Cargo.toml
web_cad_core/src/: lib.rs
web_cad_frontend/: index.html  package-lock.json  package.json
web_cad_frontend/src/: main.ts  style.css
