[package]
name = "web_cad_core"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "Web3 Rust CAD Tool Core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console"
] }

eframe = "0.27"
egui = "0.27"
glow = "0.13" # Used by eframe for 3D

# Web-specific dependencies needed for Wasm panic hooks
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.5"
